<resources>
    <string name="app_name">Minesweeper</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--list_item.xml-->
    <string name="hidden">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="bomb">x</string>

    <!--activity_main.xml-->
    <string name="activity_main_highscores_btn_text">View Highscores</string>
    <string name="activity_main_directionsBtn_text">DIRECTIONS</string>

    <!--fragment_highscores.xml-->
    <string name="highscores">HIGHSCORES</string>

    <!--fragment_directions.xml-->
    <string name="fragment_directions_headerText_text">DIRECTIONS</string>
    <string name="fragment_directions_objectiveHeader_text">Objective:</string>
    <string name="fragment_directions_objectiveText_text">Uncover all blocks not containing a mine.
        The quicker you complete this, the better your score.</string>
    <string name="fragment_directions_howToPlayHeader_text">How to play:</string>
    <string name="fragment_directions_howToPlayClickText_text">Click on a block to uncover it.</string>
    <string name="fragment_directions_howToPlayLongClickText_text">Long click on a block to flag it.</string>

    <!--fragment_post_highscore.xml-->
    <string name="fragment_post_highscore_header_textView_text">Post Highscore</string>
    <string name="fragment_post_highscore_name_editText_hint">Display Name</string>
    <string name="fragment_post_highscore_postBtn_text">Post!</string>

    <!--AdMob-->
    <string name="admob_app_id">ca-app-pub-8900786168887522~5772693282</string>
    <string name="admob_unit_id">ca-app-pub-8900786168887522/7095058402</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-8900786168887522/9793320032</string>
    <string name="admob_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
