<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DirectionsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--[START header layout]-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_directions_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:background="#C0C0C0"
            android:gravity="center">

            <ImageButton
                android:id="@+id/fragment_directions_backImgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_back"/>

            <TextView
                android:id="@+id/fragment_directions_headerText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_directions_headerText_text"
                android:textSize="25sp"
                android:textAlignment="center"/>

        </android.support.constraint.ConstraintLayout>
        <!--[END header layout]-->

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_directions_directionsConstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_directions_constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/fragment_directions_objectiveHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="80dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:text="@string/fragment_directions_objectiveHeader_text"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_directions_objectiveText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_directions_objectiveHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:text="@string/fragment_directions_objectiveText_text"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/fragment_directions_howToPlayHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_directions_objectiveText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:text="@string/fragment_directions_howToPlayHeader_text"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_directions_howToPlayClickText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_directions_howToPlayHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:text="@string/fragment_directions_howToPlayClickText_text"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/fragment_directions_howToPlayLongClickText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_directions_howToPlayClickText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20dp"
                android:text="@string/fragment_directions_howToPlayLongClickText_text"
                android:textSize="15sp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>