<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PostHighscoreFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60000000"
        android:clickable="true"
        android:focusable="true">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@android:color/white">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp">

                <ImageButton
                    android:id="@+id/fragment_post_highscore_closeImgBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_close"/>

                <TextView
                    android:id="@+id/fragment_post_highscore_header_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_post_highscore_closeImgBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/fragment_post_highscore_header_textView_text"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/fragment_post_highscore_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_post_highscore_header_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="15dp"
                    android:hint="@string/fragment_post_highscore_name_editText_hint"/>

                <Button
                    android:id="@+id/fragment_post_highscore_postBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_post_highscore_name_editText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="25dp"
                    android:text="@string/fragment_post_highscore_postBtn_text"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>



    </android.support.constraint.ConstraintLayout>

</FrameLayout>